CSS Positoning. Container is fixed, Image is fixed. There is still a problem with spacing inside the descriptions.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,8 +4,9 @@ body {
 
 }
 .container {
-	position: relative;
-	width: 960px;
+    display: flex;
+    width: 960px;
+    margin: 0 auto;
 
 }
 header {
@@ -17,6 +18,7 @@ header {
 	height: 2.32rem;
 	justify-content: flex-start;
 	position: absolute;
+	margin: 0 auto;
 }
 
 .logo {
@@ -25,8 +27,8 @@ header {
 }
 
 .banner {
-	width: 960px;
-	background-image: url("./resources/images/moto.jpg");
+	width: 100%;
+	background-image: url("../images/moto.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -36,7 +38,7 @@ header {
 
 }
 
-nav {
+nav span {
 	width: 100%;
 	background-color: firebrick;
 	height: 2.5rem;
@@ -46,12 +48,16 @@ nav {
 	justify-content: space-around;
 	z-index: 25;
 }
+nav {
+	width: 100%;
+	background-color: firebrick;
+}
 
 .product_grid {
 	margin-top: 3rem;
 	width: 960px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	background-color: white;
 }
 
@@ -60,7 +66,7 @@ nav {
 	color: white;
 	margin-top: 9rem;
 	height: 9rem;
-	width: 25em;
+	width: 20em;
 	padding-bottom: 3rem;
 }
 
@@ -80,35 +86,30 @@ nav {
 
 .description {
 	display: flex;
-	max-width: 30%;
+	width: 30%;
 	margin-top: 3rem;
-	height: auto;
 	border: 4px solid black;
 	flex-direction: column;
-	justify-content: space-between;
-	flex-wrap: wrap-reverse;
-
+	justify-content: flex-end;
+	align-items: center;
 }
+
 
 .description h3 {
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	background-color: black;
 	color: white;
 	height: 2rem;
 	align-items: center;
-
+	width: 100%;
 }
 
 .description img {
-	display: flex;
-	height: auto;
 	max-height: 9rem;
-	width: auto;
 	max-width: 9rem;
 	margin: 2rem;
-	align-items: center;
-	justify-content: center;
+
 }
 
 .footer {
@@ -154,3 +155,4 @@ nav {
 h5 {
 	font-size: 1rem;
 }
+
